--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,31 +129,57 @@
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
                     android:layout_below="@id/textRecommendedCoursesList"/> -->
-                <TextView
-                    android:id="@+id/textExploreCoursesList"
-                    android:layout_width="wrap_content"
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:text="@string/explore"
-                    android:textSize="@dimen/text_margin"
-                    android:textColor="@color/colorPrimary"
-                    android:paddingVertical="5dp"
-                    android:paddingHorizontal="10dp"
-                    android:typeface="sans"
-                    android:layout_marginTop="16dp"
+                    android:id="@+id/ll"
+                    app:cardElevation="8dp"
                     android:layout_below="@id/frameRecommendedCourses"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:drawablePadding="@dimen/activity_horizontal_margin"
-                    app:drawableTint="@color/colorPrimary"
-                    app:drawableEndCompat="@drawable/next" />
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="10dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:text="@string/explore"
+                            android:textSize="@dimen/text_margin"
+                            android:textColor="@color/colorPrimary"
+                            android:paddingVertical="5dp"
+                            android:paddingHorizontal="10dp"
+                            android:typeface="sans"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:layout_weight="1"/>
+                        <TextView
+                            android:id="@+id/textExploreCoursesList"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="SEE MORE"
+                            android:textSize="@dimen/text_margin"
+                            android:textColor="@color/colorPrimary"
+                            android:paddingVertical="5dp"
+                            android:paddingHorizontal="10dp"
+                            android:typeface="sans"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:drawablePadding="@dimen/activity_horizontal_margin"
+                            app:drawableTint="@color/colorPrimary"
+                            app:drawableEndCompat="@drawable/next"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/exploreCourseListView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:scrollbars="horizontal"
-                    android:layout_below="@id/textExploreCoursesList"
+                    android:layout_below="@id/ll"
                     android:layout_margin="5dp"
                     tools:listitem="@layout/explore_course_recycler_card"/>
                 <!--<ImageView
@@ -171,8 +197,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/activity_horizontal_margin"
-        android:visibility="gone"
-        tools:listitem="@layout/explore_course_recycler_card"/>
+        android:visibility="gone"/>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
