--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,7 +142,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:text="@string/explore"
@@ -158,7 +158,7 @@
                             android:id="@+id/textExploreCoursesList"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="SEE MORE"
+                            android:text="@string/see_more"
                             android:textSize="@dimen/text_margin"
                             android:textColor="@color/colorPrimary"
                             android:paddingVertical="5dp"
